--- a/index.html
+++ b/index.html
@@ -3,12 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>HANNA SHAMNA</h1>
-  <p>I am a recent graduate in BSc(Hons).Geology from University of Plymouth. Throughout my undergraduate joureney, 
-    I was the receipeint of International Excellence Scholarship award covering half of my tution fees. My
-  interest lies in integrating geospatial data analysis with Artificial Intelligence.</p>
+  <header>
+    <h1>Hanna Shamna</h1>
+    <p>GIS Analyst | GIS Developer | Student</p>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Hi! I’m a passionate learner and developer. I enjoy building projects and
+      learning new technologies.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>My Projects</h2>
+
+    <div class="project-card">
+      <h3>Rainfall Analysis in Mizoram</h3>
+      <p>Short description of your project.</p>
+      <a href="https://github.com/hanna_portfolio.online/project1" target="_blank">
+        View Code
+      </a>
+    </div>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: hannah.180504@gmail.com</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Hanna Shamna</p>
+  </footer>
 </body>
 </html>
