--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-     <img src="dp.jpg" alt="My photo" style="width:120px;height:120px;border-radius:50%;object-fit:cover;display:block;margin:0 auto 16px;border:3px solid #fff;">
+     <img src="profile.jpg" alt="My photo" class="profile-pic">
     <h1>Hanna Shamna</h1>
     <p>GIS Analyst | GIS Developer | Student</p>
   </header>
