--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ i<!DOCTYPE html>
   </header>
   
 <section id="quick-links" class="quick-links">
-  <a href="#about">About Me</a>
-  <a href="#skills">Skills</a>
-  <a href="#projects">Projects</a>
+  <a href="#about">About</a> |
+  <a href="#skills">Skills</a> |
+  <a href="#projects">Projects</a> |
   <a href="#contact">Contact</a>
 </section>
+  
   <section id="about">
   <h2>About Me</h2>
 
