--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ i<!DOCTYPE html>
   </p>
 </section>
 
- <section id="skills">
+<section id="skills">
   <h2>Skills</h2>
 
   <div class="skills-container">
 
     <div class="skill-category">
-      <h3>Technical Skills</h3>
+      <h3>🛠️ Technical Skills</h3>
       <ul>
         <li>Microsoft Excel</li>
         <li>Microsoft Word</li>
@@ -81,7 +81,7 @@ i<!DOCTYPE html>
     </div>
 
     <div class="skill-category">
-      <h3>Programming Skills</h3>
+      <h3>💻 Programming Skills</h3>
       <ul>
         <li>Python (Beginner)</li>
         <li>Machine Learning (Beginner)</li>
@@ -89,7 +89,7 @@ i<!DOCTYPE html>
     </div>
 
     <div class="skill-category">
-      <h3>Soft Skills</h3>
+      <h3>🤝 Soft Skills</h3>
       <ul>
         <li>Report Writing & Compiling</li>
         <li>Problem-Solving</li>
@@ -105,6 +105,7 @@ i<!DOCTYPE html>
 
   </div>
 </section>
+
 
 
   <section id="projects">
