--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@ i<!DOCTYPE html>
 
       <h3>🛠️ Technical Skills</h3>
       <p>
-    Microsoft Excel, Microsoft Word, Microsoft PowerPoint, Microsoft Outlook,
-    QGIS (Intermediate), ArcGIS Pro, ArcGIS Online
+    Microsoft Excel
+    Microsoft Word
+    Microsoft PowerPoint
+    Microsoft Outlook
+    QGIS (Intermediate)
+    ArcGIS Pro
+    ArcGIS Online
      </p>
 
  
