--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@ i<!DOCTYPE html>
   <h2>Skills</h2>
 
       <h3>🛠️ Technical Skills</h3>
-      <p>
-    Microsoft Excel
-    Microsoft Word
-    Microsoft PowerPoint
-    Microsoft Outlook
-    QGIS (Intermediate)
-    ArcGIS Pro
-    ArcGIS Online
-     </p>
+      <ul>
+    <li>Microsoft Excel</li>
+    <li>Microsoft Word</li>
+    <li>Microsoft PowerPoint</li>
+    <li>Microsoft Outlook</li>
+    <li>QGIS (Intermediate)</li>
+    <li>ArcGIS Pro</li>
+    <li>ArcGIS Online</li>
+      </ul>
 
  
       <h3>💻 Programming Skills</h3>
