--- a/index.html
+++ b/index.html
@@ -78,16 +78,23 @@ i<!DOCTYPE html>
 
  
       <h3>💻 Programming Skills</h3>
-      <p>
-    Python (Beginner), Machine Learning (Beginner)
-      </p>
-
+      <ul>
+    <li>Python (Beginner)</li>
+    <li>Machine Learning (Beginner)</li>
+      </ul>
+  
       <h3>🤝 Soft Skills</h3>
-       <p>
-    Report Writing & Compiling, Problem-Solving, Time Management,
-    Critical & Independent Thinking, Leadership, Team Player, Organization,
-    Adaptability & Flexibility, Collaboration & Conflict Resolution
-      </p>
+        <ul>
+    <li>Report Writing & Compiling</li>
+    <li>Problem-Solving</li>
+    <li>Time Management</li>
+    <li>Critical & Independent Thinking</li>
+    <li>Leadership</li>
+    <li>Team Player</li>
+    <li>Organization</li>
+    <li>Adaptability & Flexibility</li>
+    <li>Collaboration & Conflict Resolution</li>
+       </ul>
 </section>
       
   <section id="projects">
