--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ i<!DOCTYPE html>
     <li>Collaboration & Conflict Resolution</li>
        </ul>
 </section>
+  
+<div class="small-bar"></div>
+
       
   <section id="projects">
     <h2>My Projects</h2>
