--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ i<!DOCTYPE html>
   </p>
 </section>
   
-<div class="small-bar"></div>
+<div class="section-bar"></div>
 
 <section id="skills">
   <h2>Skills</h2>
@@ -99,7 +99,7 @@ i<!DOCTYPE html>
        </ul>
 </section>
   
-<div class="small-bar"></div>
+<div class="section-bar"></div>
    
   <section id="projects">
     <h2>My Projects</h2>
