--- a/index.html
+++ b/index.html
@@ -102,15 +102,20 @@ i<!DOCTYPE html>
 <div class="section-bar"></div>
    
   <section id="projects">
-    <h2>My Projects</h2>
+  <h2>My Projects</h2>
 
+  <div class="projects-container">
+
+    <!-- PROJECT 1 -->
     <div class="project-card">
+      <img src="images/project1.jpg" alt="Rainfall Analysis">
       <h3>Rainfall Analysis in Mizoram</h3>
-      <p>Short description of your project.</p>
-      <a href="https://github.com/hanna_portfolio.online/project1" target="_blank">
-        View Code
-      </a>
+      <p>Performed spatial & temporal rainfall analysis using GIS.</p>
+      <a href="project1.html" class="btn" target="_blank">View Article</a>
     </div>
+
+  </div>
+</section>
 
   <section id="contact">
     <h2>Contact</h2>
