--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ i<!DOCTYPE html>
 
     <!-- PROJECT 1 -->
     <div class="project-card">
-      <img src="images/project1.jpg" alt="Rainfall Analysis">
-      <h3>Rainfall Analysis in Mizoram</h3>
-      <p>Performed spatial & temporal rainfall analysis using GIS.</p>
+      <img src="NDVI.jpg" alt="Vegetation Analysis">
+      <h3>Vegetation Analysis in Trivandrum</h3>
+      <p>Performed temporal analysis of vegetation health using NDVI over time (2015-2025)</p>
       <a href="project1.html" class="btn" target="_blank">View Article</a>
     </div>
 
