--- a/index.html
+++ b/index.html
@@ -147,3 +147,14 @@ i<!DOCTYPE html>
   </footer>
 </body>
 </html>
+
+<script>
+  function openModal(id) {
+    document.getElementById(id).style.display = "block";
+  }
+
+  function closeModal(id) {
+    document.getElementById(id).style.display = "none";
+  }
+</script>
+
