--- a/index.html
+++ b/index.html
@@ -120,15 +120,13 @@ i<!DOCTYPE html>
 
     <h2>NDVI Analysis Study</h2>
 
-    <img src="images/project1.jpg" alt="NDVI Analysis">
+    <img src="NDVI.jpg" alt="NDVI Analysis">
 
     <p>
       Short scientific explanation of NDVI analysis here…  
       Example:  
       NDVI was calculated using near-infrared and red bands to evaluate vegetation
       health. High NDVI values were observed in…
-
-      (You can replace this with your real text)
     </p>
   </div>
 </div>
