--- a/index.html
+++ b/index.html
@@ -123,10 +123,7 @@ i<!DOCTYPE html>
     <img src="NDVI.jpg" alt="NDVI Analysis">
 
     <p>
-      Short scientific explanation of NDVI analysis here…  
-      Example:  
-      NDVI was calculated using near-infrared and red bands to evaluate vegetation
-      health. High NDVI values were observed in…
+      NDVI explanation
     </p>
   </div>
 </div>
