--- a/index.html
+++ b/index.html
@@ -123,7 +123,17 @@ i<!DOCTYPE html>
     <img src="NDVI.jpg" alt="NDVI Analysis">
 
     <p>
-      NDVI explanation
+    In this study, I calculated the Normalized Difference Vegetation Index (NDVI) for 
+    the Trivandrum region to understand vegetation health over time.
+    Satellite imagery from Landsat-8/9 (2015 and 2025) was downloaded from USGS Earth Explorer
+    dated 2015 and 2025.
+    To streamline the workflow, model builder was used to automate the processing steps.
+    The red (Band 4) and near-infrared (Band 5) layers were first clipped to the study area
+    and NDVI was computed using the formula:
+                                 NDVI = (B5 - B4)/ (B5 + B4)
+    The results show that vegetation health has improved significantly over the last 10 years, 
+    possibly due to reduced human activity during the COVID-19 period or regional conservation policies
+    put forth by the government.
     </p>
   </div>
 </div>
