--- a/index.html
+++ b/index.html
@@ -140,15 +140,7 @@ i<!DOCTYPE html>
     </div>
 
   </div>
-    <script>
-  function openModal(id) {
-    document.getElementById(id).style.display = "block";
-  }
-
-  function closeModal(id) {
-    document.getElementById(id).style.display = "none";
-  }
-</script>
+    
 </section>
 
   <section id="contact">
@@ -159,6 +151,7 @@ i<!DOCTYPE html>
   <footer>
     <p>© 2025 Hanna Shamna</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
 
