--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <p>
     LinkedIn: 
     <a 
-      href="https://www.linkedin.com/in/hanna-shamna" 
+      href="https://www.linkedin.com/in/hanna-shamna-b3a13b254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" 
       target="_blank"
       style="color:#66aaff; text-decoration:none;"
     >
