--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <h2>Contact</h2>
 
   <p class="contact-line">
-    <a class="contact-link" href="mailto:hannah.1805041@gmail.com" target="_blank">
+    <a class="contact-link" href="mailto:hannah.1805041@gmail.com">
       📧 Email
     </a>
   </p>
