--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!-- ✅ CONTACT INSIDE PROFILE -->
   <div id="profile-contact">
       <p class="contact-line">
-        📧 <a href="mailto:hannah.180504@gmail.com" class="contact-link">hannah.180504@gmail.com</a>
+      <a class="contact-link" href="mailto:hannah.1805041@gmail.com">
+      📧 Email
+      </a>
       </p>
 
       <p class="contact-line">
