--- a/index.html
+++ b/index.html
@@ -151,6 +151,21 @@
               NDVI = (B5 − B4) / (B5 + B4)
               Results show significant improvement in vegetation over 10 years.
             </p>
+
+            <p>
+             Colour interpretation
+            </p>
+
+          <p>
+            Green - Dense, healthy vegetation
+          </p>
+            <p>
+              Yellow - Low to moderate vegetation or agricultural land
+            </p>
+            <p>
+              Red - Urban Area
+            </p>
+            </p>
           </div>
         </div>
 
