--- a/index.html
+++ b/index.html
@@ -148,25 +148,18 @@
               To streamline the workflow, model builder was used to automate the processing steps.
               The red (Band 4) and near-infrared (Band 5) layers were first clipped to the study area
               and NDVI was computed using the formula:
-              <p>
+              <p class="center-text">
               NDVI = (B5 − B4) / (B5 + B4)
               </p>
             <p>
               Results show significant improvement in vegetation over 10 years.
             </p>
 
-            <p>
-             Colour interpretation
-            </p>
-
-          <p>
+            <p class="center-text">
+            Colour interpretation
             Green - Dense, healthy vegetation
-          </p>
-            <p>
-              Yellow - Low to moderate vegetation or agricultural land
-            </p>
-            <p>
-              Red - Urban Area
+            Yellow - Low to moderate vegetation or agricultural land
+            Red - Urban Area
             </p>
             </p>
           </div>
