--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </p>
 
             <p class="center-text">
-            Colour interpretation
+            <span class="underline-text">Colour interpretation</span>
             </p>
             <p>
             Green - Dense, healthy vegetation
