--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
             <p class="center-text">
             <span class="underline-text">Colour interpretation</span>
             </p>
-            <p>
+            <p class="center-text">
             Green - Dense, healthy vegetation
             </p>
-            <p>
+            <p class="center-text">
             Yellow - Low to moderate vegetation or agricultural land
             </p>
-            <p>
+            <p class="center-text">
             Red - Urban Area
             </p>
             </p>
