--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
    <img id="ndvi-small-img" 
      src="NDVI.jpg" 
      alt="NDVI Map" 
-     class="small-modal-img" />
+     class="medium-modal-img" />
 
     <!-- Explanation text -->
     <p>
