--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <img src="NDVI.jpg" alt="Vegetation Analysis" onclick="openImageModal('NDVI.jpg')">
         <h3>Vegetation Analysis in Trivandrum</h3>
         <p>Performed temporal analysis of vegetation health using NDVI over time (2015–2025)</p>
-        <p class="center-text">Click image to zoom in.</p>
+        <p class="center-text underline-text">Click image to zoom in.</p>
 
         <a class="btn" onclick="openModal('ndvi-modal')">View Article</a>
       </div>
